[tool.poetry]
name = "autoprocprio"
version = "9.0.1"
description = "Automatically prioritize important apps' CPU priority and affinity"
authors = ["Rain <Rainyan@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "~0.4.6"
psutil = "~5.9.0"
termcolor = "~2.3.0"
pywin32 = {version=">=303", markers="sys_platform=='win32'"}

[tool.poetry.dev-dependencies]
pycodestyle = "~2.11.0"

[tool.poetry.scripts]
autoprocprio = "autoprocprio:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
